images and section full

--- a/_posts/2024-03-10-funes-ml.md
+++ b/_posts/2024-03-10-funes-ml.md
@@ -107,7 +107,7 @@ Later, in his opinion paper Quiroga called them "concept cells" or "concept neur
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/luke.jpg" alt="Luke" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure 4: An specific neuron firing when the concept "Luke" is present.</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 4: An specific neuron firing when the concept "Luke Skywalker" is present.</p>
 </div>
 
 This demonstrates that the concept neurons in the hippocampus (and surrounding areas) encode representations at such a high level of abstraction that they can be triggered by different types of stimuli. Furthermore, Quiroga showed that these abstract representations can form rapidly. In one experiment, he and his team presented photos and text of themselves to patients who had only known them for two days. Remarkably, the patients already had neurons that fired in response to their photos and names.
@@ -127,13 +127,13 @@ In short, the same neuron can fire for different but related concepts (like Luke
 
 When you see a photo of Luke Skywalker in a magazine, the initial visual recognition occurs in the inferior temporal gyrus; you don't need the Luke Skywalker concept neuron for this. However, this concept neuron is crucial for transforming that visual perception into a memory, allowing you to later recall seeing Luke Skywalker's photo in the magazine. These concept neurons represent the abstract concepts we use to form and store memories. Their role in memory formation makes sense because we typically remember general concepts (people, events, places) rather than exact details.
 
-But this post is about Funes, memory and machine learning, right? So how does all this information connect to Funes?
+But this post is about Funes, memory and deep learning, right? So how does all this information connect to Funes?
 
 Funes represents the extreme example of a person without the ability to abstract. Quiroga hypothesizes that without concept neurons, we would be like Funes, unable to abstract or categorize, only capable of remembering precise, uncompressed details of everything we experience, but paradoxically unable to truly think. This highlights a fundamental insight: thinking is the process of abstracting, associating concepts, and creating relationships between them. These conceptual associations then help strengthen our memories and allow us to recall them later.
 
 ## Multimodal Neurons in Machine Learning
 
-Now, we will connect this crucial idea of abstraction to machine learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called ["Multimodal neurons in artificial neural networks"](https://distill.pub/2021/multimodal-neurons/) from OpenAI, in particular, from intepretability researches I really admire such as Chris Olah (he has a fantastic [blog](https://colah.github.io/) in which you can learn a lot about machine learning).
+Now, we will connect this crucial idea of abstraction to deep learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called ["Multimodal neurons in artificial neural networks"](https://distill.pub/2021/multimodal-neurons/) from OpenAI, in particular, from intepretability researches I really admire such as Chris Olah (he has a fantastic [blog](https://colah.github.io/) in which you can learn a lot about machine learning).
 
 Let's analyze it a bit. Authors discovered that individual neurons in CLIP [5] can recognize abstract concepts across different forms, from photographs to drawings to written words, suggesting that both artificial and human brains might share a fundamental approach to understanding the world by organizing information into high-level semantic concepts.
 
@@ -165,18 +165,22 @@ While the neuron-level analysis revealed many concepts CLIP understands, it did 
 
 However, this geographic knowledge isn't stored in the way one might expect. Despite extensive searching, the team did not found any single "San Francisco neuron", nor does the concept seem to be composed of simpler elements like "California" plus "city". This suggests that some of CLIP's more sophisticated knowledge is encoded in more complex ways, perhaps as vectors, directions in the embedding space, or other geometric structures we don't yet fully understand.
 
-This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. When I was researching about concept cells in my internship, one of my main concerns was how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept. This problem could be related to one of the most fascinating concepts in Artificial Neural Networks.
+This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. When I was researching about concept cells in my internship, one of my main concerns was how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept. This problem could be related to one of the most fascinating concepts in Artificial Neural Networks (ANNs).
 
-## Polysemanticity and Superposition in Neural Networks
+## Polysemanticity and Superposition in Artificial Neural Networks
 
-To interpret Artificial Neural Networks effectively, it would be ideal if each individual neuron encoded a single human-interpretable concept. However, in reality, neurons can be either "monosemantic", meaning they respond to a single feature, or "polysemantic", meaning they respond to many unrelated features [].
+Similarly to real concept cells in the brain, the previous research demonstrated that multiple models had a single dedicated neuron encoding the concept of "Donald Trump". This concept appeared so frequent that the ANNs consider it efficient to assign a single neuron exclusively to represent it.
+
+To interpret ANNs effectively, it would be ideal if each individual neuron encoded a single human-interpretable concept. However, in reality, neurons can be either "monosemantic", meaning they respond to a single feature like "Donald Trump", or "polysemantic", meaning they respond to many unrelated features [8,9].
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/polysemantic-neuron" alt="polysemantic-neuron" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: Polysemantic neuron which responds to cat faces, fronts of cars, and cat legs</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 8: Polysemantic neuron which responds to cat faces, fronts of cars, and cat legs</p>
 </div>
 
-The reasons behind this phenomenon are not yet fully understood, but several hypotheses attempt to explain it. One of the most interesting is the Superposition hypothesis, proposed by well-known interpretability researchers at Anthropic.
+The reasons behind this phenomenon are not yet fully understood, but several hypotheses attempt to explain it. One of the most interesting is the Superposition hypothesis, proposed by well-known interpretability researchers at Anthropic [10].
+
+(Now, I will use *concept* and *feature* interchangeably to maintain consistency with the earlier narrative. However, it's important to note that *concepts* are typically human-interpretable, while *features* are properties of the input that a sufficiently large neural network reliably assigns a neuron to represent. In contrast to concepts, *features* don’t need to be human-interpretable. They simply need to be elements of the input data.)
 
 They use toy models, small ReLU networks trained on synthetic data with sparse input features, to investigate how and when models exhibit superposition. That is, when they represent more features than they have dimensions.
 
@@ -186,22 +190,32 @@ However, when feature sparsity is introduced (features are frequently zero or in
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/sparsity.png" alt="polysemantic-neuron" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: As sparsity increases, the model fits more features than it has dimensions.</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 9: As sparsity increases, the model fits more features than it has dimensions.</p>
 </div>
 
 This observation leads to a super interesting interpretation of neural network behavior: the networks we train in practice may be effectively operating as compressed simulations of much larger, highly sparse networks. That is, our trained models might be implementing the same computational patterns and representing the same features as a hypothetical larger network would, but in a more compact form where multiple features and operations coexist in the same dimensional space through controlled interference patterns.
+
+<div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/projected-network.png" alt="projected-neuron" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure 10: ANNs could be simulating bigger and more sparse ANNs.</p>
+</div>
 
 But why is this happening?
 
 As we have seen before, the key lies in a fundamental truth about our world: sparsity. Think about looking at a photo: at any given spot, you're unlikely to find a dog's head, a horizontal line, or a perfect curve. In human language, most words aren't about Martin Luther King or about Science Fiction literature. This sparsity principle, combined with two crucial mathematical foundations, enables neural networks to achieve efficient information encoding.
 
-The first mathematical fact is the Johnson-Lindenstrauss lemma, which demonstrates that while an *n*-dimensional space can only contain *n* truly orthogonal vectors, it can fit *exp(n)* "almost orthogonal" vectors. The second is compressed sensing, which shows that **sparse** vectors can be accurately reconstructed even after projection into lower-dimensional spaces, something impossible with dense vectors.
+The first mathematical fact is the Johnson-Lindenstrauss lemma, which demonstrates that while an *n*-dimensional space can only contain *n* truly orthogonal vectors, it can fit *exp(n)* "almost orthogonal" vectors. The second is compressed sensing [11], which shows that **sparse** vectors can be accurately reconstructed even after projection into lower-dimensional spaces, something impossible with dense vectors.
 
 Neural networks exploit these properties by representing concepts as almost-orthogonal directions in the vector space of neuron outputs. Since the features are only almost-orthogonal, one feature activating looks like other features slightly activating. Tolerating this "noise" or "interference" comes at a cost. But for neural networks with highly sparse features, this cost may be outweighed by the benefit of being able to represent more features. The network further mitigates this cost through the non-linear activation functions that filter out low-level noise. This elegant trade-off allows neural networks to represent exponentially more features than their dimensional space would traditionally allow, with the sparse nature of concepts ensuring the benefits substantially outweigh the interference costs.
 
 One of the most fascinating aspects of superposition is how it emerges during neural network training through distinct phase transitions. When training a model, each feature can reach one of three possible states: (1) it may remain unlearned, (2) become encoded in superposition with other features, or (3) acquire its own dedicated dimension in the representation space. These transitions don't occur gradually but rather exhibit sharp, discontinuous changes characteristic of phase transitions in physical systems.
 
 The conditions ruling these transitions depend on a complex interplay between feature sparsity and relative importance. While sparsity is a prerequisite for superposition, the relationship isn't linear, it interacts with feature importance in determining the final representational state. This phase-change behavior appears in both empirical observations and theoretical models, where the optimal weight configurations show abrupt, discontinuous shifts in both magnitude and degree of superposition. 
+
+<div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/phase-change.png" alt="phase-change-neuron" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure 11: Phase change in ANN training.</p>
+</div>
 
 But this is not everything! After deeper exploration, features seem to organize themselves into geometric structures such as pentagons and tetrahedrons!
 
@@ -211,7 +225,29 @@ The dimensionality measure tells us two crucial things about how a feature is re
 
 What's fascinating is that these fractional dimensions aren't random. Features tend to organize themselves into specific, stable patterns where they share space in precise ways. For example, when two features pair up perfectly, each gets exactly half a dimension (*Dimensionality=1/2*). What's even more interesting is that when we add up all these fractional dimensions across features, they typically sum to the total number of dimensions available. The network is trying its best to efficiently use the available space.
 
-This discovery reveals that superposition isn't just one thing. It's actually a collection of distinct states, each with its own geometric pattern of how features share space. As the authors explain, it's similar to how ice isn't just "frozen water" but can form different crystal structures depending on conditions. As we change how features are presented to the network during training, it jumps between these different superposition states, each representing a different way of efficiently packing features into its limited dimensional space.
+This discovery reveals that superposition isn't just one thing. It's actually a collection of distinct states, each with its own geometric pattern of how features share space. As the authors explain, it's similar to how ice isn't just "frozen water" but can form different crystal structures depending on conditions. In a somewhat similar way, neural network features appear to exhibit multiple phases within the broader concept of "superposition".
+
+<div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/superposition-geometry" alt="phase-change-neuron" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure 12: The geometry of superposition.</p>
+</div>
+
+Finally, to close the circle, we can relate the Superposition hypothesis to biological neurons. A key contribution of this work is introducing feature co-occurrence probability as a central concept in neural encoding. This idea reveals that maximally-dense distributed codes work best when items never need to be represented simultaneously, allowing for extreme superposition. For instance, in a motor task where a person reaches for spatially separated targets, only one target needs to be encoded at a time. However, when features must be represented together, like visual neurons encoding white noise (which contains all spatial frequencies), a code with less or no superposition works better to avoid interference. These insights agree with existing neuroscience hypotheses [12] about how the brain might use highly compressed representations for long-range communication between areas while maintaining sparser representations for local computation.
+
+The paper is quite extensive but incredibly fascinating. If you're interested, you can read it here. Also, kudos to the authors for the excellent images throughout!
+
+*Note - 20/11/2024: Chris Olah, the lead researcher behind this investigation, has participated in a wonderful podcast with Lex Fridman, where he discusses this hypothesis and the interpretability of artificial neural networks in general. Highly recommended!*
+
+## Conclusion
+
+In this blog, we explored the connection between the fictional character Funes the Memorious, concept encoding in biological neural networks, and how concepts might be represented in ANNs. For ANNs, the key to concept encoding lies in the sparsity of concepts in reality. Through gradient descent, these networks exploit this sparsity by assigning neurons to represent multiple concepts, learning to manage the resulting interferences. 
+
+This suggests a beautiful new perspective on Artificial Neural Networks: they might be a projection or simulation of a larger, more sparse network.
+
+Additionally, the fact that certain concepts consistently get a dedicated neuron in each model, based on their frequency in the data, similar to how our does, it's a fascinating insight. It suggests that both ANNs using gradient descent and biological networks converge on the same optimal way of representing information. This hints at the existence of a natural, universal optimal way for encoding information in networks, regardless of whether they are artificial or biological. Of course, more research is needed, but this is incredibly exciting!
+
+That's all for today. Keep learning, and keep forgetting! Don't be like Funes!
+
 
 ## References
 
@@ -228,4 +264,14 @@ This discovery reveals that superposition isn't just one thing. It's actually a 
 [6] Nguyen, A., Yosinski, J., & Clune, J. (2016). Multifaceted feature visualization: Uncovering the different types of features learned by each neuron in deep neural networks. arXiv preprint arXiv:1602.03616.
 
 [7] Radford, A., Jozefowicz, R., & Sutskever, I. (2017). Learning to generate reviews and discovering sentiment. arXiv preprint arXiv:1704.01444.
+
+[8] Olah, C., Cammarata, N., Schubert, L., Goh, G., Petrov, M., & Carter, S. (2020). Zoom in: An introduction to circuits. Distill, 5(3), e00024-001.
+
+[9] Olah, C., Mordvintsev, A., & Schubert, L. (2017). Feature visualization. Distill, 2(11), e7.
+
+[10] Elhage, N., Hume, T., Olsson, C., Schiefer, N., Henighan, T., Kravec, S., ... & Olah, C. (2022). Toy models of superposition. arXiv preprint arXiv:2209.10652.
+
+[11] Donoho, D. L. (2006). Compressed sensing. IEEE Transactions on information theory, 52(4), 1289-1306.
+
+[12] Ganguli, S., & Sompolinsky, H. (2012). Compressed sensing, sparsity, and dimensionality in neuronal information processing and data analysis. Annual review of neuroscience, 35(1), 485-508.
 
