--- a/_posts/2024-03-10-funes-ml.md
+++ b/_posts/2024-03-10-funes-ml.md
@@ -234,13 +234,13 @@ This discovery reveals that superposition isn't just one thing. It's actually a 
 
 Finally, to close the circle, we can relate the Superposition hypothesis to biological neurons. A key contribution of this work is introducing feature co-occurrence probability as a central concept in neural encoding. This idea reveals that maximally-dense distributed codes work best when items never need to be represented simultaneously, allowing for extreme superposition. For instance, in a motor task where a person reaches for spatially separated targets, only one target needs to be encoded at a time. However, when features must be represented together, like visual neurons encoding white noise (which contains all spatial frequencies), a code with less or no superposition works better to avoid interference. These insights agree with existing neuroscience hypotheses [12] about how the brain might use highly compressed representations for long-range communication between areas while maintaining sparser representations for local computation.
 
-The paper is quite extensive but incredibly fascinating. If you're interested, you can read it here. Also, kudos to the authors for the excellent images throughout!
+The paper is quite extensive but incredibly fascinating. If you're interested, you can read it [here](https://transformer-circuits.pub/2022/toy_model/index.html#phase-change). Also, kudos to the authors for the excellent images throughout!
 
-*Note - 20/11/2024: Chris Olah, the lead researcher behind this investigation, has participated in a wonderful podcast with Lex Fridman, where he discusses this hypothesis and the interpretability of artificial neural networks in general. Highly recommended!*
+*Note - 20/11/2024: Chris Olah, the lead researcher behind this investigation, has participated in a wonderful [podcast with Lex Fridman](https://www.youtube.com/watch?v=ugvHCXCOmm4&t=6122s), where he discusses the superposition hypothesis and the interpretability of artificial neural networks in general. Highly recommended!*
 
 ## Conclusion
 
-In this blog, we explored the connection between the fictional character Funes the Memorious, concept encoding in biological neural networks, and how concepts might be represented in ANNs. For ANNs, the key to concept encoding lies in the sparsity of concepts in reality. Through gradient descent, these networks exploit this sparsity by assigning neurons to represent multiple concepts, learning to manage the resulting interferences. 
+In this blog, we explored the connection between the fictional character Funes the Memorious, concept encoding in biological neural networks, and how concepts might be represented in ANNs. For ANNs, the key to concept encoding lies in the sparsity of concepts in reality. Through gradient descent, these networks exploit this sparsity by assigning neurons to represent multiple concepts, learning to manage the resulting interferences, and thereby increasing the network's information storage efficiency.
 
 This suggests a beautiful new perspective on Artificial Neural Networks: they might be a projection or simulation of a larger, more sparse network.
 
