--- a/_posts/2024-03-10-funes-ml.md
+++ b/_posts/2024-03-10-funes-ml.md
@@ -174,7 +174,7 @@ Similarly to real concept cells in the brain, the previous research demonstrated
 To interpret ANNs effectively, it would be ideal if each individual neuron encoded a single human-interpretable concept. However, in reality, neurons can be either "monosemantic", meaning they respond to a single feature like "Donald Trump", or "polysemantic", meaning they respond to many unrelated features [8,9].
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
-  <img src="/assets/images/polysemantic-neuron" alt="polysemantic-neuron" style="max-width: 100%; height: auto;">
+  <img src="/assets/images/polysemantic-neuron.png" alt="polysemantic-neuron" style="max-width: 100%; height: auto;">
   <p style="text-align: center; margin-top: 10px;">Figure 8: Polysemantic neuron which responds to cat faces, fronts of cars, and cat legs</p>
 </div>
 
