--- a/_posts/2024-03-10-funes-ml.md
+++ b/_posts/2024-03-10-funes-ml.md
@@ -228,7 +228,7 @@ What's fascinating is that these fractional dimensions aren't random. Features t
 This discovery reveals that superposition isn't just one thing. It's actually a collection of distinct states, each with its own geometric pattern of how features share space. As the authors explain, it's similar to how ice isn't just "frozen water" but can form different crystal structures depending on conditions. In a somewhat similar way, neural network features appear to exhibit multiple phases within the broader concept of "superposition".
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
-  <img src="/assets/images/superposition-geometry" alt="phase-change-neuron" style="max-width: 100%; height: auto;">
+  <img src="/assets/images/superposition-geometry.png" alt="phase-change-neuron" style="max-width: 100%; height: auto;">
   <p style="text-align: center; margin-top: 10px;">Figure 12: The geometry of superposition.</p>
 </div>
 
